<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ActivityTwo">

    <EditText
        android:id="@+id/weight_editText_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weight_editText"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="50dp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/height_editText_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/height_editText"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="50dp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/second_buttonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/bmi_textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_textView"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/result_textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_textView"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="50dp"
        android:textStyle="normal"
        />

</LinearLayout>